--- a/src/app.css
+++ b/src/app.css
@@ -15,13 +15,71 @@
     /* ふぉんと */
     --heading-font: "Kaisei Decol";
     --body-font: "Kiwi Maru";
-    
+    --heder-height: 60px;
+    --footer-height: 120px;
+    --main-padding-top: 20px;
+    --main-max-width: 1300px;
 }
+@media screen and (max-width: 640px) {
+    :root {
+        --heder-height: 60px;
+        --footer-height: 120px;
+        --main-padding-top: 20px;
+        --main-max-width: 1300px;
+    }
+}
+
 
 body {
     scroll-behavior: smooth;
     background-color: var(--white);
     color: var(--black);
+}
+
+header {
+    height: var(--heder-height);
+    backdrop-filter: blur(4px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+header > div {
+    width: 100%;
+    max-width: var(--main-max-width);
+}
+footer {
+    min-height: var(--footer-height);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+footer > div {
+    max-width: var(--main-max-width);
+}
+main {
+    padding: 1rem;
+    max-width: var(--main-max-width);
+    margin: 0 auto;
+    min-height: calc(100vh - var(--heder-height) - var(--footer-height));
+    padding-top: var(--main-padding-top);
+}
+a {
+    color: var(--secondary);
+}
+a:hover {
+    color: var(--primary);
+}
+
+/* Tailwind animation delayないので追加 */
+.animation-delay-250 {
+    animation-delay: 250ms;
+}
+.animation-delay-500 {
+    animation-delay: 500ms;
+}
+.animation-delay-750 {
+    animation-delay: 750ms;
 }
 
 @font-face {
