--- a/src/app.css
+++ b/src/app.css
@@ -20,6 +20,10 @@
 	--footer-height: 120px;
 	--main-padding-top: 20px;
 	--main-max-width: 1300px;
+
+	/* アニメーション */
+	/* 最初のアニメーションの時間(以後送らせるためのdelay用) */
+	--opening-time: 2000ms;
 }
 @media screen and (max-width: 640px) {
 	:root {
