--- a/src/app.css
+++ b/src/app.css
@@ -22,8 +22,12 @@
 	--main-max-width: 1300px;
 
 	/* アニメーション */
-	/* 最初のアニメーションの時間(以後送らせるためのdelay用) */
+	/* オープニングの時間(以後送らせるためのdelay用) */
 	--opening-time: 2000ms;
+	/* オープニング後のSNSの動きが終わった時間 */
+	--after-sns-time: calc(var(--opening-time) + 700ms);
+	/* SNSのうごきのあと、アクセスカウンタの動きが終わった時間 */
+	--after-access-counter-time: calc(var(--after-sns-time) + 3400ms);
 }
 @media screen and (max-width: 640px) {
 	:root {
