--- a/src/app.css
+++ b/src/app.css
@@ -14,8 +14,8 @@
 	--kmsn-bg: #5ebfeb;
 
 	/* ふぉんと */
-	--heading-font: 'Kaisei Decol';
-	--body-font: 'Kiwi Maru';
+	--heading-font: "Kaisei Decol";
+	--body-font: "Kiwi Maru";
 	--heder-height: 60px;
 	--footer-height: 120px;
 	--main-padding-top: 20px;
